# aivm-discord-bot

./: README.md  pyproject.toml
aivm_bot/: __init__.py  bot.py  env.sample.py
docker/: Dockerfile
