[tool.poetry]
name = "aivm-bot"
version = "0.1.0"
description = ""
authors = ["José Cabrero-Holgueras <jose.cabrero@nillion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
nillion-aivm = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aivm-bot = "aivm_bot:main"